fix invisible block title

--- a/themes/angular-participa-consulta/app/blocks.scss
+++ b/themes/angular-participa-consulta/app/blocks.scss
@@ -13,6 +13,10 @@
   color: #4F9CAC;
 }
 
+.panel-title {
+  color: #4F9CAC;
+}
+
 .block-head-with-icon {
   padding: 15px 15px 15px 55px;
 }
